# speech_scriber

./: .env.sample  .gitignore  README.md  poetry_run.cmd  poetry_run_check_cuda.cmd  poetry_run_uploader_file.cmd  pyproject.toml  wsl_cmd_start.cmd
app/: check_cuda.py  logging_config.py  main.py  uploader_file.py
app/backend/: diarization_processing.py  merge_results.py  whisper_processing.py
