[tool.poetry]
name = "speech-scriber"
version = "0.1.0"
description = "Speech recognition and diarization tool"
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.22.0"
pandas = ">=1.3.5"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
streamlit = "^1.36.0"
python-dotenv = "^1.0.1"
torch = "^2.3.1"
torchvision = "^0.18.1"
pyannote-audio = "^3.3.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
